# cocos2d-x_gameController_using_kore_server

./: README
game-controller-test_cocos/: .cocos-project.json  CMakeLists.txt  appinfo.json
game-controller-test_cocos/Classes/: AppDelegate.cpp  GameControllerTest.cpp  GameControllerTest.h
websocket_kore/: .gitignore  CMakeLists.txt
websocket_kore/assets/: frontend.html
websocket_kore/conf/: conf.conf
websocket_kore/src/: common.h  main.c  websocket.c
